# tauri-iso-tool

./: .gitignore  AGENTS.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-01-tauri-iso-tool.md
docs/superpowers/specs/: 2026-06-01-tauri-iso-tool-design.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: builder.rs  lib.rs  main.rs  state.rs  templates.rs
