[package]
name = "tauri_iso_tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_iso_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hadris-cd = "1.1"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1.23.2", features = ["v4"] }
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
tempfile = "3.27.0"
hadris-iso = "1.1"

